--- a/www/index.html
+++ b/www/index.html
@@ -27,10 +27,17 @@
                 </select>                
             </div>   
             <div data-role="footer">
-                <h4>&copy; 2015 Carlos Henrique Lemos</h4>
+                <h4>&copy; 2015 Carloshlemos®</h4>
             </div> 
         </div> 
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/lib/persistence.js"></script>
+        <script type="text/javascript" src="js/lib/persistence.store.sql.js"></script>
+        <script type="text/javascript" src="js/lib/persistence.store.websql.js"></script>
+        <script type="text/javascript" src="js/lib/persistence.store.cordovasql.js"></script>        
+        <script type="text/javascript" src="js/api/persistenceController.js"></script>
+        <script type="text/javascript" src="js/api/serviceController.js"></script>
+        <script type="text/javascript" src="js/api/util.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body> 
 </html>
