Adicionando o recurso de voz

--- a/www/index.html
+++ b/www/index.html
@@ -20,11 +20,11 @@
                     <li><a href="#" id="btnDesligar" class="ui-btn ui-btn-inline ui-icon-power ui-btn-icon-left">Desligar</a></li> 
                 </ul>           
 
-                <select name="flag" id="flag" data-role="slider" style="width: 
-                        ">
-                    <option value="off" selected="selected">Off</option>
-                    <option value="on">On</option>
-                </select>                
+                <!--                <select name="flag" id="flag" data-role="slider" style="width: 
+                                        ">
+                                    <option value="off" selected="selected">Off</option>
+                                    <option value="on">On</option>
+                                </select>                -->
             </div>   
             <div data-role="footer">
                 <h4>&copy; 2015 Carloshlemos®</h4>
@@ -38,6 +38,7 @@
         <script type="text/javascript" src="js/api/persistenceController.js"></script>
         <script type="text/javascript" src="js/api/serviceController.js"></script>
         <script type="text/javascript" src="js/api/util.js"></script>
+        <script type="text/javascript" src="js/app/comandoController.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body> 
 </html>
