--- a/www/index.html
+++ b/www/index.html
@@ -17,14 +17,13 @@
                 <ul data-role="listview" data-inset="true" data-dividertheme="b"> 
                     <li data-role="list-divider">Opções</li> 
                     <li><a href="#" id="btnLigar" class="ui-btn ui-btn-inline ui-icon-power ui-btn-icon-left">Ligar</a></li> 
-                    <li><a href="#" id="btnDesligar" class="ui-btn ui-btn-inline ui-icon-power ui-btn-icon-left">Desligar</a></li> 
                 </ul>           
 
-                <!--                <select name="flag" id="flag" data-role="slider" style="width: 
-                                        ">
-                                    <option value="off" selected="selected">Off</option>
-                                    <option value="on">On</option>
-                                </select>                -->
+                <select name="flag" id="flag" data-role="slider" style="width: 
+                        ">
+                    <option value="off" selected="selected">Off</option>
+                    <option value="on">On</option>
+                </select>                
             </div>   
             <div data-role="footer">
                 <h4>&copy; 2015 Carloshlemos®</h4>
