--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,8 @@
             <div data-role="content">      
                 <ul data-role="listview" data-inset="true" data-dividertheme="b"> 
                     <li data-role="list-divider">Opções</li> 
-                    <li><a href="#" id="btnLigar" class="ui-btn ui-btn-inline ui-icon-power ui-btn-icon-left">Ligar</a></li> 
+                    <li><a href="#" id="btnVozTeste" class="ui-btn ui-btn-inline ui-icon-power ui-btn-icon-left">Teste</a></li> 
+                    <li><a href="#" id="btnVoz" class="ui-btn ui-btn-inline ui-icon-power ui-btn-icon-left">Iniciar</a></li> 
                 </ul>           
 
                 <select name="flag" id="flag" data-role="slider" style="width: 
