--- a/www/index.html
+++ b/www/index.html
@@ -40,5 +40,8 @@
         <script type="text/javascript" src="js/api/util.js"></script>
         <script type="text/javascript" src="js/app/comandoController.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script>
+            app.initialize();
+        </script>
     </body> 
 </html>
