--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,9 @@
     <head> 
         <meta charset="utf-8"> 
         <title>Ardussivel</title> 
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>        
+        <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+        <script src="js/lib/jquery-1.11.3.min.js"></script>
+        <script src="js/lib/jquery.mobile-1.4.5.min.js"></script>        
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head> 
     <body> 
